--- a/src/components/layOut/navbar.css
+++ b/src/components/layOut/navbar.css
@@ -1,5 +1,23 @@
+body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+  }
+
+  main {
+    flex: 1 0 auto;
+  }
+
 .logo{
     max-width: 100%;
     height: auto;
     margin-right: 4rem;
+}
+
+.footerLid{
+    margin-top: 50vh;
+    padding-top: 20px;
+    color: #fff;
+    background-color: #4C4C4C;
+    position: absolute;
 }
